5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1712_2499.log
== TEST (2019-05-13 12:32:59) 
-- CODE:
from math import *
n=int(input("digite um numero"))
while n /factorial(n):
	n+=1
print(n)
-- OUTPUT:
179
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:33:09) 
-- CODE:
from math import *
n=int(input("digite um numero"))
while n /factorial(n):
	n+=1
print(n)
-- OUTPUT:
179
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:33:42) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
while n /factorial(n):
	n+=1/n
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while n /factorial(n):
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:34:25) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
while n /factorial(n):
	n= n/n
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while n /factorial(n):
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:34:52) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
while n /factorial(n):
	n= n/ni
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    n= n/ni
NameError: name 'ni' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:35:01) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
while n /factorial(ni):
	n= n/ni
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while n /factorial(ni):
NameError: name 'ni' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:37:14) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
n= (n*1)/factorial(n)
while n,n:
	n+=1
print(n)
-- ERROR:
File "XXXX", line 4
    while n,n:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:37:23) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
n= (n*1)/factorial(n)
while(n,n):
	n+=1
print(n)
-- ERROR:
File "XXXX", line 4
    while n,n:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:37:34) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
n= (n*1)/factorial(n)
while(n,20):
	n+=1
print(n)
-- ERROR:
File "XXXX", line 4
    while n,n:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:48:26) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
z=factorial(n)
while(n!=n and n>=0):
	n+=1
print(round(n,8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 12:48:41) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
z=factorial(n)
while(n!=n and n>=0):
	n+=1
print(round(n,8))
-- EXECUTION TIME:
0.130961
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
7
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
15
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:51:59) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
z=factorial(n)
while(n!=n and n>=0):
	n= n+1
print(round(n,8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:54:38) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
z=factorial(n)
while(n!=n and n>=0):
	n= (n+1)/z
	
print(round(n,8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:55:17) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
z=factorial(n)
while(n!=n and n>=0):
	n= (n+1)
	
print(round((n/z),8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:59:25) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
z=factorial(n)
i=0
soma=0
while(n!=n and n>=0):
	n= (n+1/z)
print(round((n),8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:59:41) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
z=factorial(n)
i=0
soma=0
while(n!=n and n>=0):
	n= (n+1/z)
	i+=1
print(round((n),8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:00:18) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
z=factorial(n)
i=0
soma=0
while(n!=n and n>=0):
	n= (n+1/factorial(i))
	i+=1
print(round((n),8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:00:56) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
z=factorial(n)
i=0
soma=0
while(i<n):
	n= (n+1/factorial(i))
	i+=1
print(round((n),8))
-- OUTPUT:
9.71828153
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:01:15) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
z=factorial(n)
i=0
soma=0
while(i<n):
	n= (n+1/factorial(n))
	i+=1
print(round((n),8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n= (n+1/factorial(n))
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:02:03) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
z=factorial(n)
i=0
soma=0
while(i<n):
	n= (n+1/factorial(n))
	
print(round((n),8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n= (n+1/factorial(n))
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:02:05) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
z=factorial(n)
i=0
soma=0
while(i<n):
	n= (n+1/factorial(n))
	
print(round((n),8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n= (n+1/factorial(n))
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:02:09) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
z=factorial(n)
i=0
soma=0
while(i<n):
	n= (n+1/factorial(n))
	
print(round((n),8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n= (n+1/factorial(n))
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:02:20) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
z=factorial(n)
i=0
soma=0
while(i<n):
	n= (n+1/factorial(n))
	i=i+1
print(round((n),8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n= (n+1/factorial(n))
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:03:05) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	i = (n+1/factorial(n))
	i=i+1
	soma=soma+
print(round((n),8))
-- ERROR:
File "XXXX", line 8
    soma=soma+
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:03:06) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	i = (n+1/factorial(n))
	i=i+1
	soma=soma+
print(round((n),8))
-- ERROR:
File "XXXX", line 8
    soma=soma+
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:03:10) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	i = (n+1/factorial(n))
	i=i+1

print(round((n),8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:03:39) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i>n):
	i = (n+1/factorial(n))
	i=i+1
print(round((n),8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:03:50) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	i = (n+1/factorial(n))
	i=i+1
print(round((n),8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:04:07) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	n = ((n+1)/factorial(n))
	i=i+1
print(round((n),8))
-- OUTPUT:
0.0015873
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:04:23) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	n = ((n+1)/factorial(n))+1
	i=i+1
print(round((n),8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n = ((n+1)/factorial(n))+1
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:04:42) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	n = ((n+1)/factorial(n))/20
	i=i+1
print(round((n),8))
-- OUTPUT:
7.937e-05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:04:44) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	n = ((n+1)/factorial(n))/20
	i=i+1
print(round((n),8))
-- OUTPUT:
7.937e-05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:04:47) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	n = ((n+1)/factorial(n))/20
	i=i+1
print(round((n),8))
-- OUTPUT:
7.937e-05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:05:01) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	n = ((n+1)/factorial(n))/n

	i=i+1
print(round((n),8))
-- OUTPUT:
0.00022676
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:05:05) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	n = ((n+1)/factorial(n))/n

	i=i+1
print(round((n),8))
-- OUTPUT:
0.00022676
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:05:12) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	n = ((n+1)/factorial(n))

	i=i+1
print(round((n),8))
-- OUTPUT:
0.0015873
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:06:35) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	n = ((n)/factorial(n+1))
	i=i+1
print(round((n),8))
-- OUTPUT:
0.00017361
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:06:53) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	i = ((n)/factorial(n+1))
	i=i+1
print(round((n),8))
-- OUTPUT:
0.00017361
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:07:01) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	i = ((n)/factorial(n+1))
	i=i+1
print(round((n),8))
-- OUTPUT:
0.00017361
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:07:52) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	i = ((n)/factorial(i))
	i=i+1
print(round((n),8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:08:27) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	i = ((n+1)/factorial(i))
	i=i+1
print(round((n),8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:08:37) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	i = ((soma+1)/factorial(i))
	i=i+1
print(round((n),8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    i = ((soma+1)/factorial(i))
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:09:00) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	soma = ((soma+1)/factorial(i))
	i=i+1
print(round((n),8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:09:20) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	soma = (soma+1/factorial(i))
	i=i+1
print(round((n),8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:10:05) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i>n):
	soma = (soma+1/factorial(i))
	i=i+1
print(round((n),8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:10:14) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	soma = (soma+1/factorial(i))
	i=i+1
print(round((n),8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:10:17) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	soma = (soma+1/factorial(i))
	i=i+1
print(round((n),8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:10:19) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	soma = (soma+1/factorial(i))
	i=i+1
print(round((n),8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:10:27) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	soma = (soma+1/factorial(i))
	i=i+1
print(round((soma),8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:10:32) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
soma=0
while(i<n):
	soma = (soma+1/factorial(i))
	i=i+1
print(round((soma),8))
-- EXECUTION TIME:
0.149138
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:13:01) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
x=0
while(i<n):
	x = (soma+1/factorial(i))
	i=i+1
print(round((x),8))
-- EXECUTION TIME:
0.186887
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2499/main.py", line 6, in <module>
    x = (soma+1/factorial(i))
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:13:11) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
x=0
while(i<n):
	x = (soma+1/factorial(i))
	i=i+1
print(round((x),8))
-- EXECUTION TIME:
0.120658
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2499/main.py", line 6, in <module>
    x = (soma+1/factorial(i))
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:13:11) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
x=0
while(i<n):
	x = (soma+1/factorial(i))
	i=i+1
print(round((x),8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = (soma+1/factorial(i))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:13:13) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
x=0
while(i<n):
	x = (soma+1/factorial(i))
	i=i+1
print(round((x),8))
-- EXECUTION TIME:
0.123127
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2499/main.py", line 6, in <module>
    x = (soma+1/factorial(i))
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:13:13) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
x=0
while(i<n):
	x = (soma+1/factorial(i))
	i=i+1
print(round((x),8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = (soma+1/factorial(i))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:13:18) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
x=0
while(i<n):
	x= (soma+1/factorial(i))
	i=i+1
print(round((x),8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x= (soma+1/factorial(i))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:13:19) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
x=0
while(i<n):
	x= (soma+1/factorial(i))
	i=i+1
print(round((x),8))
-- EXECUTION TIME:
0.239626
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2499/main.py", line 6, in <module>
    x= (soma+1/factorial(i))
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:13:31) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
x=0
while(i<n):
	x= (x+1/factorial(i))
	i=i+1
print(round((x),8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:13:32) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
x=0
while(i<n):
	x= (x+1/factorial(i))
	i=i+1
print(round((x),8))
-- EXECUTION TIME:
0.157136
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:15:58) 
-- CODE:
from math import *
n=int(input("digite um numero: "))
i=0
x=0
while(i<n):
	x= (x+1/factorial(i))
	i=i+1
print(round((x),8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
